# med_voice_recognition

./: .env  .gitignore  README.md  add.py  amh_cn_db.xlsx  app.py  app_text.py  app_voice.py  config.py  create_cs_DB.py  cs_snb_form.csv  data_latest.parquet  database.py  keys.txt  pyproject.toml  setup.cfg  t.ipynb  test.py
docs/: contribution_guide.md  installation.md  usage.md
src/: models.py
src/services/: audio_preprocessing.py  audio_service.py  file_service.py  llm_service.py  speech_service.py
src/services.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/src.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/utils/: prompt.py  text_parser.py  utils.py
src/voiceRecognition/: models.py
src/voiceRecognition/services/: audio_preprocessing.py  audio_service.py  file_service.py  llm_service.py
src/voiceRecognition/utils/: prompt.py
static/css/: styles.css
static/js/: main.js  test.js
templates/: dashboard.html  index.html  index_text.html  index_trial.html  index_trial2.html
templates/audio/: index_trial2.html
waves/: Ibrahim Salama Street.m4a  New Recording 10.m4a  New Recording 11.m4a  New Recording 8.m4a  New Recording 9.m4a  saudi_1.m4a  saudi_2.m4a  wave1.m4a  wave2.m4a
